--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
+  --background: #d5d3e5;
   --foreground: #171717;
 }
 
@@ -10,12 +10,17 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --font-nunito: var(--font-geist-nunito);
+  --color-main: #f1f1f1;
+  --color-accent: #8685ef;
+  --color-white: #faf8ff;
+  --color-gray: #d5d3e5;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #d5d3e5;
+    --foreground: black;
   }
 }
 
