--- a/app/globals.css
+++ b/app/globals.css
@@ -29,3 +29,14 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+::-webkit-scrollbar {
+  display: none;
+}
+
+* {
+  -ms-overflow-style: none; /* IE and old Edge */
+}
+
+* {
+  scrollbar-width: none; /* Firefox */
+}
